// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ToastNotification /> danger 1`] = `
<div>
  <p
    class="border flex justify-between mb-2 p-2 rounded bg-red-100 border-red-800 text-red-800"
  >
    <span>
      Oh Noes!
    </span>
    <button
      class="font-bold"
      data-testid="dismiss"
      type="button"
    >
      ×
    </button>
  </p>
</div>
`;

exports[`<ToastNotification /> empty 1`] = `<div />`;

exports[`<ToastNotification /> success 1`] = `
<div>
  <p
    class="border flex justify-between mb-2 p-2 rounded bg-green-100 border-green-800 text-green-800"
  >
    <span>
      <a
        class="underline"
        href="https://twitter.com/1183836409850814464/status/1230233654959407104"
        rel="noopener noreferrer"
        target="_blank"
      >
        Your tweetstorm has been created!
      </a>
    </span>
    <button
      class="font-bold"
      data-testid="dismiss"
      type="button"
    >
      ×
    </button>
  </p>
</div>
`;
